# Co2-Calculator-Streamlit

./: .gitignore  README.md  calculator.py  emission-data.toml  main.py  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  test_co2_calculator.py  test_string_check.py
